# BME-prog1-nagyhaz-feladat

./: .gitignore  CMakeLists.txt  Morze nagyházi dokumentáció.md  README.md  binary_tree.c  binary_tree.h  functions.c  functions.h  main.c  morse.c  morse.h  szotar.txt
.github/workflows/: cmake-multi-platform.yml
